--- a/index.html
+++ b/index.html
@@ -465,8 +465,8 @@
         <p>Geomar Pavon</p>
       </div>
       <div class="miembro">
-        <img src="directivo5.jpg" alt="Daniel Barrientos">
-        <h3>Secretario</h3>
+        <img src="daniel.jpg" alt="Daniel Barrientos">
+        <h3>Subdirector</h3>
         <p>Daniel Barrientos</p>
       </div>
     </div>
@@ -476,9 +476,7 @@
   <footer>
     <p>&copy; 2025 Instituto Dionisio de Herrera – Creciendo contigo.</p>
     <div>
-      <a href="#"><i class="fab fa-facebook-f"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-youtube"></i></a>
+    
     </div>
   </footer>
 
