--- a/perfiles.html
+++ b/perfiles.html
@@ -135,7 +135,7 @@
       </ul>
     </div>
     <div class="card">
-      <h3>Contabilidad</h3>
+      <h3>Contaduria y Finanzas</h3>
       <p>Capacitación integral en finanzas y gestión empresarial.</p>
       <ul>
         <li>Contabilidad financiera y administrativa.</li>
@@ -240,3 +240,4 @@ window.addEventListener("scroll", ()=>{
 
 </body>
 </html>
+
