--- a/perfiles.html
+++ b/perfiles.html
@@ -111,7 +111,7 @@
 
 <!-- CICLO -->
 <section>
-  <div class="section-title">Ciclo</div>
+  <div class="section-title">Básica</div>
   <div class="cards-container">
     <div class="card">Séptimo Grado</div>
     <div class="card">Octavo Grado</div>
@@ -135,7 +135,7 @@
       </ul>
     </div>
     <div class="card">
-      <h3>Contaduria y Finanzas</h3>
+      <h3>Contaduría y Finanzas</h3>
       <p>Capacitación integral en finanzas y gestión empresarial.</p>
       <ul>
         <li>Contabilidad financiera y administrativa.</li>
@@ -240,4 +240,5 @@ window.addEventListener("scroll", ()=>{
 
 </body>
 </html>
+
 
